--- a/static/style.css
+++ b/static/style.css
@@ -6,6 +6,12 @@
     font-family: 'AeonikTrial', sans-serif;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 
 body {
     background-color: var(--bg-color);
