--- a/static/style.css
+++ b/static/style.css
@@ -74,3 +74,61 @@ img {
  article {
      container-type: initial;
  }
+
+
+
+ section.list {
+    column-gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    padding: 0 3.5rem;
+    row-gap: .5rem;
+}
+
+h2 {
+    color: #8C8C8C;
+    margin: 0;
+    padding: 1rem 3.5rem;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+}
+
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.navigation {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 3.5rem;
+}
+
+.navigation ul {
+    display: flex;
+    gap: 1rem;
+}
+
+.navigation ul a {
+    color: black;
+    text-decoration: none;
+}
+
+.navigation ul a:hover {
+    text-decoration: underline;
+}
+
+@media (max-width: 800px) {
+    section.list {
+        padding: .5rem;
+        row-gap: .4rem;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    }
+
+    .navigation {
+        padding: 1rem;
+        flex-direction: column;
+    }
+}
