--- a/static/style.css
+++ b/static/style.css
@@ -74,3 +74,123 @@ img {
  article {
      container-type: initial;
  }
+
+
+ section.list {
+    column-gap: 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    padding: 0 3.5rem;
+    row-gap: .5rem;
+}
+
+h2 {
+    color: #8C8C8C;
+    margin: 0;
+    padding: 1rem 3.5rem;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+}
+
+
+h3 {
+    margin-bottom: 0;
+}
+
+article {
+    display: flex;
+    flex-direction: column;
+}
+
+picture {
+    align-items: center;
+    display: flex;
+    height: 400px;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+}
+
+picture::after {
+    background: #8C8C8C80;
+    border-radius: 8px;
+    bottom: 0;
+    content: '';
+    /* height: calc(100% - 8em); */
+    height: calc(100% - 50%);
+    left: 0;
+    position: absolute;
+    width: 100%;
+    z-index: 0;
+}
+
+picture img {
+    transition: 1 ease-in-out;
+    filter: grayscale(1);
+    height: 100%;
+    object-fit: contain;
+    position: relative;
+    width: 100%;
+    z-index: 1;
+}
+
+.list a {
+    border-radius: 8px;
+    padding: .6em;
+    text-decoration: none;
+    color: black;
+}
+
+.list a:hover img {
+    filter: grayscale(0);
+    transition: 1 ease-in-out;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+.navigation {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 3.5rem;
+}
+
+.navigation ul {
+    display: flex;
+    gap: 1rem;
+}
+
+.navigation ul a {
+    color: black;
+    text-decoration: none;
+}
+
+.navigation ul a:hover {
+    text-decoration: underline;
+}
+
+@media (max-width: 800px) {
+    section.list {
+        padding: .5rem;
+        row-gap: .4rem;
+        grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    }
+
+    picture {
+        height: 200px;
+    }
+
+
+    picture::after {
+        height: calc(100% - 4em);
+    }
+
+    .navigation {
+        padding: 1rem;
+        flex-direction: column;
+    }
+}
